Base for prometheus client implementation
+The code was forked from DigitalOcean Inc. (https://github.com/digitalocean/prometheus-client-c) and slightly adequated to our code style and format.
+There are still some things to complete:
-Fetching the process information from system files isn't portable, so maybe this shouldn't be supported, or only supported at Linux distros.
-Add configuration arguments for the monitor endpoint.
-Start the server if the monitoring is enabled.
-Add docs for the new dependency 'libmicrohttpd'.
-Add docs for the whole monitoring behavior.
-Analyze to find memleaks (run Valgrind).
-Validate portability.
-Define the metrics to display at the endpoints.

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,6 +16,7 @@ SUBDIRS = src man test
 EXTRA_DIST  = NOTICE
 EXTRA_DIST += LICENSE
 EXTRA_DIST += src/asn1/asn1c/LICENSE
+EXTRA_DIST += src/monitor/LICENSE
 EXTRA_DIST += examples/tal/afrinic.tal
 EXTRA_DIST += examples/tal/apnic.tal
 EXTRA_DIST += examples/tal/lacnic.tal
